<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <pl.droidsonroids.gif.GifImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/background"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@android:color/transparent"
        android:paddingLeft="100dp"
        android:paddingRight="100dp"
        android:text="@string/start"
        android:textSize="36sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:paddingLeft="90dp"
        android:paddingRight="90dp"
        android:text="@string/highscore"
        android:textSize="36sp" />


    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:paddingLeft="90dp"
        android:paddingRight="90dp"
        android:text="@string/about"
        android:textSize="36sp" />

    <Button
        android:id="@+id/button20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:paddingLeft="90dp"
        android:paddingRight="90dp"
        android:text="@string/Continue"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/button1"
        android:layout_centerVertical="true"
        android:layout_marginBottom="98dp"
        android:text="@string/exterminator"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="40sp"
        tools:ignore="MissingPrefix" />


</RelativeLayout>